[project]
name = "knowledgeagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "botocore>=1.43.8",
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-aws>=1.4.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "uvicorn>=0.47.0",
]
