[project]
name = "knowledgeagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "botocore>=1.43.8",
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-aws>=1.4.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
    "tavily-python>=0.3.0",
    "pymupdf>=1.23.0",
    "unstructured[pdf,epub]>=0.12.0",
    "chromadb>=0.4.0",
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "langchain-openai>=0.2.0",
    "sentence-transformers>=2.2.0",
    "wikipedia>=1.4.0",
    "torch==2.12.0",
]
